# france-inflation-data-cleaned

./: README.md  compute_variations.py  donnees_brutes.xlsx  processing.py  pyproject.toml  utils.py
donnees_traitees/: Ensemble_des_menages_France_IPC_Glissement_annuel_NonNomenclature.csv  Ensemble_des_menages_France_IPC_None_Nomenclature.csv  Ensemble_des_menages_France_IPC_None_NonNomenclature.csv  Ensemble_des_menages_France_IPC_Variations_mensuelles_Nomenclature.csv  Ensemble_des_menages_France_IPC_Variations_mensuelles_NonNomenclature.csv  Ensemble_des_menages_France_Indice_CVS_des_prix_a_la_consommation_Glissement_annuel_NonNomenclature.csv  Ensemble_des_menages_France_Indice_CVS_des_prix_a_la_consommation_None_NonNomenclature.csv  Ensemble_des_menages_France_Indice_CVS_des_prix_a_la_consommation_Variations_mensuelles_NonNomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_Glissement_annuel_Nomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_Glissement_annuel_NonNomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_None_Nomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_None_NonNomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_Variations_mensuelles_Nomenclature.csv  Ensemble_des_menages_France_Metropolitaine_IPC_Variations_mensuelles_NonNomenclature.csv  Ensemble_des_menages_France_Metropolitaine_Indice_dinflation_sousjacente_Glissement_annuel_NonNomenclature.csv  Ensemble_des_menages_France_Metropolitaine_Indice_dinflation_sousjacente_None_NonNomenclature.csv  (+15 more)
